manifests/apps/fetch-api/fetch_api/fleet-api/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fetch-api-fleet
  namespace: fetch-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx                  # home, # Dankata, # Marina/Zhelezhnitsa
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.8.0.0/24,92.247.208.224/32,87.243.107.94/32,151.237.55.238/32"
  labels:
    app: fetch-api
    env: home
spec:
  tls:
  - hosts:
    - fleet.car.k8s.iaminyourpc.xyz
    secretName: tls-fleet-car-k8s-iaminyourpc-xyz
  rules:
  - host: fleet.car.k8s.iaminyourpc.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fetch-api
            port:
              number: 8069
